<resources>
    <string name="app_name">MCF Daily Attendance</string>
    <string name="registration_details">Registration Form</string>
    <string name="empname">Name</string>
    <string name="empadd">Address</string>
    <string name="empemail">Email</string>
    <string name="empcontact">Mobile No1</string>
    <string name="empcontact2">Mobile No2</string>
    <string name="empqualification">Qualification</string>
    <string name="empactivities">Activities</string>
    <string name="btnregister">Register</string>
    <string name="btnreset">Reset</string>
    <string name="edtuserid">User Name</string>
    <string name="edtpassword">Password</string>

    <string-array name="select_BloodGroup">
        <item>---Select---</item>
        <item>A+</item>
        <item>O+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>A-</item>
        <item>O-</item>
        <item>B-</item>
        <item>AB-</item>
    </string-array>

    <string-array name="select_Rank">
        <item>Select</item>
        <item>INS</item>
        <item>ADM</item>
        <item>TRNCMD</item>
        <item>SINS</item>
    </string-array>

    <string-array name="select_Mrn">
        <item>Select</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
    </string-array>
    <string-array name="select_Gender">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="selet_presenty">
        <item>P</item>
        <item>A</item>
    </string-array>
</resources>
