<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:background="@color/backgroundColor"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_details"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >
        <android.support.v7.widget.CardView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="4dp"
            >
    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:id="@+id/reg_details"
        android:layout_marginBottom="5dp"
        tools:ignore="RtlHardcoded">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/empname"
            android:inputType="text"
            android:textAllCaps="true"
            android:id="@+id/edt_empName"
            />

        <EditText
            android:id="@+id/edt_empAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/empadd"
            android:inputType="text"
            />
    </LinearLayout>


        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"

            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/emp"
                android:id="@+id/profile_pic"
                />

        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/cardBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_empAdd1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/empadd"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/edt_empEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/empemail"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="numberPassword"
                android:id="@+id/edt_emp_password"
                android:maxLength="4"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_emp_MobileNo1"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/empcontact"
                    android:maxLength="10"
                    android:inputType="number"
                    />

                <EditText
                    android:id="@+id/edt_emp_MobileNo2"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/empcontact2"
                    android:maxLength="10"
                    android:inputType="number"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Gender"
                    android:textSize="18sp"

                    />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_gender"
                    >

                </Spinner>
            </LinearLayout>

               <!-- <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/radio_group_gender">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:id="@+id/radio_gender_male"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"
                        android:id="@+id/radio_gender_female"/>
                </RadioGroup>-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Blood Group"
                android:textSize="18sp"

                />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_bloodgrp"
            >

        </Spinner>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/cardBackground">

        <LinearLayout
            android:id="@+id/layoutQualification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_qualification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="Qualification"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/edt_empQualification"
                    android:layout_width="245dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/tv_qualification"
                    android:hint="@string/empqualification"
                    android:inputType="text"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_empQualification"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_activities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Activities"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edt_empActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="37dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/empactivities"
                    android:inputType="text"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Join Date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_joindate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:text="14-07-2017"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rank"
                android:textSize="18sp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:id="@+id/spinner_rank"
                    >

                </Spinner>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MRN"
                    android:textSize="18sp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:id="@+id/spinner_mrn"
                    >

                </Spinner>

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/cardBackground"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I agree Terms and conditions."
            android:id="@+id/check_terms"
            android:checked="false"
            />

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnregister"
                    android:textSize="18dp"
                    android:id="@+id/btn_register"
                    />

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/btnreset"
                    android:textSize="18dp" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

</ScrollView>
